[package]
name = "tellem"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
num_enum = "0.5.5"
tendril = "0.4.2"
either = "1.6.1"
bytes = "1.1.0"
thiserror = "1.0.30"
tokio-util = { version = "0.6.9", features = ["codec"], optional = true }
tracing = "0.1.29"
async-trait = { version = "0.1.52", optional = true }
tokio = { version = "1.15.0", optional = true }
futures = "0.3.19"
pin-project = "1.0.9"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["full"] }
anyhow = "1.0.52"
futures = "0.3.19"
tracing-subscriber = { version = "0.3.5", features = [ "env-filter" ] }

[features]
default = ["conn"]
codec = ["tokio-util"]
conn = ["codec", "tokio"]
handler = ["conn", "tokio/rt", "tokio/macros", "async-trait"]
