[package]
name = "tellem"
description = "Another telnet implementation"
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2021"
resolver = "2"

[dependencies]
num_enum = "0.7.0"
either = "1.9.0"
bytes = "1.5.0"
thiserror = "1.0.49"
tokio-util = { version = "0.7.9", features = ["codec"], optional = true }
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
default = ["codec"]
codec = ["tokio-util"]
